--- a/src/app/features/auth/components/register/register.component.html
+++ b/src/app/features/auth/components/register/register.component.html
@@ -1,1 +1,64 @@
-<p>register works!</p>
+<div class ="register-container">
+    <div class="logo-side">
+        <!-- X logo -->
+        <svg viewBox="0 0 24 24" class="x-logo">
+            <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+        </svg>
+    </div>
+
+    <div class = "form-side">
+        <h1>Create your account</h1>
+
+        <form (ngSubmit)="onSubmit()">
+            <div class = "form-group">
+                <input
+                    type = "text"
+                    [(ngModel)]="user.name"
+                    name="name"
+                    placeholder="Name"
+                    required
+                >
+            </div>
+
+            <div class = "form-group">
+                <input
+                    type = "email"
+                    [(ngModel)]="user.email"
+                    name="email"
+                    placeholder="Email"
+                    required
+                >
+            </div>
+
+            <div class = "form-group">
+                <input
+                    type = "text"
+                    [(ngModel)]="user.username"
+                    name="username"
+                    placeholder="Username"
+                    required
+                >
+            </div>
+
+            <div class = "form-group">
+                <input
+                    type = "password"
+                    [(ngModel)]="user.password"
+                    name="password"
+                    placeholder="Password"
+                    required
+                >
+            </div>
+
+
+            <button type="submit">Sign up</button>
+        </form>
+
+        <p class = "login-link">
+            Already have an account?
+            <a href="/login">Log in</a>
+        </p>
+
+    </div>
+
+</div>
