--- a/src/app/features/auth/components/register/register.component.scss
+++ b/src/app/features/auth/components/register/register.component.scss
@@ -19,5 +19,57 @@
     .form-side {
         width: 50%;
         padding: 2rem;
+
+        h1 {
+            font-size: 1.875rem;
+            font-weight: bold;
+            margin-bottom: 2rem;
+        }
+
+        .form-group {
+            margin-bottom: 1rem;
+
+            input {
+                width: 100%;
+                padding: 1rem;
+                border: 1px solid #ccc;
+                border-radius: 0.5rem;
+                font-size: 1rem;
+
+                &:focus {
+                    outline: none;
+                    border-color: #1DA1F2;
+                }
+            }
+        }
+
+        button {
+            width: 100%;
+            padding: 1rem;
+            background-color: #1DA1F2;
+            color: white;
+            border: none;
+            border-radius: 0.5rem;
+            font-weight: bold;
+            cursor: pointer;
+
+            &:hover {
+                background-color: darken(#1DA1F2, 10%);
+            }
+        }
+
+        .login-link {
+            margin-top: 1rem;
+            text-align: center;
+
+            a {
+                color: #1DA1F2;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
     }
 }
