--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -42,6 +42,16 @@
                 </div>
             </div>
 
+            <div class = "remember-me-container">
+                <label class = "remember-me">
+                    <input 
+                        type="checkbox"
+                        formControlName="rememberMe"
+                    >
+                    <span class="checkbox-text">Remember me</span>
+                </label>
+            </div>
+
             <button 
                 type="submit" 
                 [disabled]="isLoading || loginForm.invalid"
