styled CAPTCHA feature

--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -79,15 +79,32 @@
             </div>
 
             <div *ngIf="showCaptcha" class="captcha-container">
-                <div class="captcha-display">
+                <div class="captcha-header">
+                    <span>Enter the characters you see</span>
+                    <button>
+                        type="button"
+                        class="refresh-button"
+                        (click)="refreshCaptcha()"
+                        aria-label="Generate new CAPTCHA"
+                    >
+                        <svg viewBox="0 0 24 24" class="refresh-icon">
+                            <path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"/>
+                        </svg>
+                    ></button>
+                </div>
+                
+                
+                <div class="captcha-display" role="img" aria-label="CAPTCHA verification text">
                     {{ captchaText  }}
                 </div>
                 <input 
                     type="text"
                     [(ngModel)]="userCaptchaInput"
                     [ngModelOptions]="{standalone: true}"
-                    placeholder="Enter the text above"
+                    placeholder="Type the characters above"
                     class="captcha-input"
+                    aria-label="Enter CAPTCHA text"
+                    autocomplete="off"
                 >
             </div>
 
